After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 737877 - gb-editor-vim: Fix scroll off
gb-editor-vim: Fix scroll off
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-10-04 09:45 UTC by Carlos Soriano
Modified: 2014-10-05 00:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gb-editor-vim: Fix scroll off (1.87 KB, patch)
2014-10-04 09:45 UTC, Carlos Soriano
committed Details | Review

Description Carlos Soriano 2014-10-04 09:45:37 UTC
See patch
Comment 1 Carlos Soriano 2014-10-04 09:45:39 UTC
Created attachment 287706 [details] [review]
gb-editor-vim: Fix scroll off

rect.y + rect.height is actually the line after the last one, no the
last one.
Decrease by one more the scroll off when going a page down.