gb-editor-vim: Fix scroll off

rect.y + rect.height is actually the line after the last one, no the
last one.
Decrease by one more the scroll off when going a page down.

https://bugzilla.gnome.org/show_bug.cgi?id=737877