src/editor/gb-editor-vim.c
@@ -17,6 +17,7 @@
  */
 
 #define G_LOG_DOMAIN "vim"
+#define SCROLL_OFF 3
 
 #include <errno.h>
 #include <glib/gi18n.h>
@@ -1797,7 +1798,7 @@ gb_editor_vim_page_up (GbEditorVim *vim)
   gtk_text_view_get_iter_at_location (vim->priv->text_view, &iter,
                                       rect.x, rect.y);
 
-  line = MAX (0, gtk_text_iter_get_line (&iter) + 3);
+  line = MAX (0, gtk_text_iter_get_line (&iter) + SCROLL_OFF);
   gtk_text_iter_set_line (&iter, line);
 
   for (offset = vim->priv->target_line_offset; offset; offset--)
@@ -1821,13 +1822,14 @@ gb_editor_vim_page_down (GbEditorVim *vim)
   gtk_text_view_get_iter_at_location (vim->priv->text_view, &iter,
                                       rect.x, rect.y + rect.height);
 
-  line = MAX (0, gtk_text_iter_get_line (&iter) - 3);
+  // rect.y + rect.height is the next line affter the end of the buffer so
+  // now we have to decrease one more.
+  line = MAX (0, gtk_text_iter_get_line (&iter) - SCROLL_OFF - 1);
   gtk_text_iter_set_line (&iter, line);
 
   for (offset = vim->priv->target_line_offset; offset; offset--)
     if (gtk_text_iter_ends_line (&iter) || !gtk_text_iter_forward_char (&iter))
       break;
-
   gb_editor_vim_move_to_iter (vim, &iter, 0.0);
 }
 
